# c64_re

./: .gitignore  AGENTS.md  README.md  pyproject.toml
c64_re/: __init__.py  audio_sink.py  checkpoints.py  cia.py  coverage.py  cpu.py  d64.py  dis6502.py  frame_verify.py  frontier.py  gaps.py  hook_taxonomy.py  hooks.py  input_demo.py  islands.py  kernal.py  machine.py  memory.py  player.py  pngout.py  repro_artifacts.py  runtime.py  runtime_code.py  sid.py  snapshot.py  state_view.py  testing.py  tick_demo.py  verification.py  vic.py
c64_re/lift/: __init__.py  cfg.py  decode.py  emit.py  manifest.py  runtime.py
docs/: hardware_support.md
tests/: test_audio_sink.py  test_checkpoints_player.py  test_coverage.py  test_cpu.py  test_frame_verify.py  test_input_demo.py  test_islands.py  test_lift.py  test_lint.py  test_machine.py  test_no_undefined_names.py  test_player_record.py  test_repro_artifacts.py  test_runtime_code.py  test_state_view.py  test_taxonomy.py  test_tick_demo.py  test_verification.py
tools/: audit_layers.py  check_undefined_names.py  gen_island_manifest.py  liftgen.py  liftverify.py  lint.py  render_frame.py  run_tests.py  view.py
